# OBD

./: TODO
bikegui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  motionvisualization.cpp  myqmotiontab.cpp  myqsimtab.cpp  myqsimtab.h  myqsteadytab.cpp  myqsteadytab.h  myquprighttab.cpp  myquprighttab.h  myqwhipple.cpp  myqwhipple.h  myvtkHolonomic.cpp  myvtkHolonomic.h  myvtkTriad.cpp  myvtkTriad.h  parameters.cpp  parameters.h
whipple/include/: whipple.h  whippleutils.h
whipple/src/: whipple.cpp  whippleutils.cpp
